--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -2,35 +2,41 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@android:color/white">
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_status"
-        android:layout_gravity="center_horizontal|top" />
+        android:layout_gravity="center_horizontal|top"
+        android:background="#434" />
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_left"
-        android:layout_gravity="left|center_vertical" />
+        android:layout_gravity="left|center_vertical"
+        android:background="#564" />
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_right"
-        android:layout_gravity="right|center_vertical" />
+        android:layout_gravity="right|center_vertical"
+        android:background="#789" />
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_bottom"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="#56F" />
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_center"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:background="#650" />
 </FrameLayout>
