--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -5,15 +5,12 @@
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
-        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
-        android:text="@string/dummy_content" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
     <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:padding="48dp">
 
         <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
             android:layout_width="match_parent" android:layout_height="wrap_content"
@@ -28,8 +25,8 @@
         </LinearLayout>
 
         <ListView
-            android:layout_width="177dp"
-            android:layout_height="248dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/mainMenu"
             android:layout_gravity="center" />
     </FrameLayout>
