--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -10,33 +10,83 @@
         android:layout_height="128dp"
         android:id="@+id/image_status"
         android:layout_gravity="center_horizontal|top"
-        android:background="#434" />
+        android:background="#434"
+        android:visibility="gone" />
 
     <ImageView
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/image_left"
         android:layout_gravity="left|center_vertical"
-        android:background="#564" />
+        android:background="#564"
+        android:src="@android:drawable/ic_menu_call"
+        android:layout_alignTop="@+id/image_right"
+        android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/image_right"
         android:layout_gravity="right|center_vertical"
-        android:background="#789" />
+        android:background="#789"
+        android:src="@android:drawable/ic_menu_view"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true" />
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_bottom"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="#56F" />
+        android:background="#56F"
+        android:visibility="gone" />
 
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:id="@+id/image_center"
         android:layout_gravity="center"
-        android:background="#650" />
-</FrameLayout>
+        android:background="#650"
+        android:visibility="gone" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Rotate Your Wrist Left To Make A Phone Call"
+        android:id="@+id/textView"
+        android:layout_below="@+id/image_left"
+        android:layout_alignParentStart="true"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Rotate Your Wrist Right To Turn On Your Flashlight"
+        android:id="@+id/textView2"
+        android:textAlignment="center"
+        android:layout_alignTop="@+id/textView"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Fully extend your arm in front of you."
+        android:id="@+id/textView3"
+        android:layout_above="@+id/image_left"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="This App Runs In The Background!"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+</RelativeLayout>
